[package]
name = "hmq-tui"
version = "0.0.1"
edition = "2021"
description = "Unofficial TUI for interacting with the HiveMQ REST API"
license = "MIT License"
authors = ["Till Seeberger <seebergertill@gmail.com>", "Markus Scully <markusscully@gmail.com>"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "hmq"
path = "src/main.rs"
bench = false

[dependencies]
hivemq-openapi = { path = "hivemq-openapi" }
httpmock = "0.6"
better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.13.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.24.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = [] }
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
indexmap = "2.1.0"
arboard = "3.2.1"
tui-textarea = "0.3.1"
openssl = { version = "0.10.60", features = ["vendored"] }


# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
assets = [
    ["target/release/hmq", "/usr/bin/hmq", "755"],
    ["LICENSE", "/usr/share/licenses/hmq-tui/LICENSE", "644"],
    ["README.md", "/usr/share/doc/hmq-tui/README.md", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/hmq", dest = "/usr/bin/hmq", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/hmq-tui/LICENSE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/hmq-tui/README.md", mode = "644", doc = true },
]