[package]
name = "hmq-tui"
version = "0.2.0"
edition = "2021"
description = "Unofficial TUI for interacting with the HiveMQ REST API"
license = "MIT License"
authors = ["Till Seeberger <seebergertill@gmail.com>", "Markus Scully <markusscully@gmail.com>"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "hmq"
path = "src/main.rs"
bench = false

[dependencies]
hivemq-openapi = { path = "hivemq-openapi" }
httpmock = "0.7.0"
better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
ratatui = { version = "0.26.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
indexmap = { version = "2.1.0", features = ["serde"] }
arboard = "3.2.1"
tui-textarea = "0.4.0"
openssl = { version = "0.10.60", features = ["vendored"] }
typed-builder = "0.18.0"
regex = "1.10.2"
itertools = "0.12.0"
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json", "functions"] }
r2d2_sqlite = "0.24.0"
r2d2 = "0.8.10"

[dev-dependencies]
testcontainers = "0.15.0"
pretty_assertions = "1.4.0"
base64 = "0.21.7"
indoc = "2.0.4"

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
assets = [
    ["target/release/hmq", "/usr/bin/hmq", "755"],
    ["LICENSE", "/usr/share/licenses/hmq-tui/LICENSE", "644"],
    ["README.md", "/usr/share/doc/hmq-tui/README.md", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/hmq", dest = "/usr/bin/hmq", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/hmq-tui/LICENSE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/hmq-tui/README.md", mode = "644", doc = true },
]
